fix: Resolve path-to-regexp security vulnerability
Add npm overrides to force path-to-regexp@^6.3.0 across all dependencies.
This addresses Dependabot security alert for path-to-regexp backtracking
regex vulnerability without requiring breaking changes to Vercel version.

All instances of path-to-regexp now use secure version 6.3.0+

--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "scripts": {
     "build": "echo 'Build complete'",
     "start": "vercel dev"
+  },
+  "overrides": {
+    "path-to-regexp": "^6.3.0"
   }
 }
